--- a/resources/locales/ru/overlays.json
+++ b/resources/locales/ru/overlays.json
@@ -12,12 +12,12 @@
         {"tags": ["x00080020", "x00080030"], "pos": "tr", "format": "{v0} {v1}"},
         {"tags": ["x00080060"], "pos": "tr"},
 
-        {"value": "wlchange", "pos": "br", "format": "WC: {v0}"},
-        {"value": "wlchange", "pos": "br", "format": "WW: {v1}"},
-        {"value": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
-        {"value": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
-        {"value": "positionchange", "pos": "br", "format": "Pos: {v0}"},
-        {"value": "positionchange", "pos": "br", "format": "Значение: {v2}"}
+        {"event": "wlchange", "pos": "br", "format": "WC: {v0}"},
+        {"event": "wlchange", "pos": "br", "format": "WW: {v1}"},
+        {"event": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
+        {"event": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
+        {"event": "positionchange", "pos": "br", "format": "Pos: {v0}"},
+        {"event": "positionchange", "pos": "br", "format": "Значение: {v2}"}
     ],
     "DOM": [
         {"tags": ["fileName"], "pos": "tl"},
@@ -26,12 +26,12 @@
 
         {"tags": ["imageWidth", "imageHeight"], "pos": "bl", "format": "RES: {v0}x{v1}"},
 
-        {"value": "wlchange", "pos": "br", "format": "WC: {v0}"},
-        {"value": "wlchange", "pos": "br", "format": "WW: {v1}"},
-        {"value": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
-        {"value": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
-        {"value": "positionchange", "pos": "br", "format": "Pos: {v0}"},
-        {"value": "positionchange", "pos": "br", "format": "Значение: {v1}"}
+        {"event": "wlchange", "pos": "br", "format": "WC: {v0}"},
+        {"event": "wlchange", "pos": "br", "format": "WW: {v1}"},
+        {"event": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
+        {"event": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
+        {"event": "positionchange", "pos": "br", "format": "Pos: {v0}"},
+        {"event": "positionchange", "pos": "br", "format": "Значение: {v1}"}
     ],
     "*": [
         {"tags": ["x00100020"], "pos": "tl"},
@@ -49,11 +49,11 @@
         {"tags": ["x00080020", "x00080030"], "pos": "tr", "format": "{v0} {v1}"},
         {"tags": ["x00080060"], "pos": "tr"},
 
-        {"value": "wlchange", "pos": "br", "format": "WC: {v0}"},
-        {"value": "wlchange", "pos": "br", "format": "WW: {v1}"},
-        {"value": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
-        {"value": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
-        {"value": "positionchange", "pos": "br", "format": "Pos: {v0}"},
-        {"value": "positionchange", "pos": "br", "format": "Значение: {v2}"}
+        {"event": "wlchange", "pos": "br", "format": "WC: {v0}"},
+        {"event": "wlchange", "pos": "br", "format": "WW: {v1}"},
+        {"event": "zoomchange", "pos": "br", "format": "Z: {v0}", "precision": "3"},
+        {"event": "offsetchange", "pos": "br", "format": "Off: {v0},{v1}", "precision": "round"},
+        {"event": "positionchange", "pos": "br", "format": "Pos: {v0}"},
+        {"event": "positionchange", "pos": "br", "format": "Значение: {v2}"}
     ]
 }
