--- a/resources/locales/zh/overlays.json
+++ b/resources/locales/zh/overlays.json
@@ -1,16 +1,16 @@
 {
     "US": [
-        {"tags": ["x00100020"], "pos": "tl"},
-        {"tags": ["x00100010", "x00100040"], "pos": "tl", "format": "{v0} [{v1}]"},
-        {"tags": ["x00100030"], "pos": "tl"},
+        {"tags": ["00100020"], "pos": "tl"},
+        {"tags": ["00100010", "00100040"], "pos": "tl", "format": "{v0} [{v1}]"},
+        {"tags": ["00100030"], "pos": "tl"},
 
-        {"tags": ["x00200011", "x00200012", "x00200013"], "pos": "bl", "format": "{v0}:{v1}:{v2}"},
-        {"tags": ["x00280010", "x00280011"], "pos": "bl", "format": "RES: {v0}x{v1}"},
-        {"tags": ["x00181100"], "pos": "bl", "format": "FOV: {v0}"},
+        {"tags": ["00200011", "00200012", "00200013"], "pos": "bl", "format": "{v0}:{v1}:{v2}"},
+        {"tags": ["00280010", "00280011"], "pos": "bl", "format": "RES: {v0}x{v1}"},
+        {"tags": ["00181100"], "pos": "bl", "format": "FOV: {v0}"},
 
-        {"tags": ["x00080080"], "pos": "tr"},
-        {"tags": ["x00080020", "x00080030"], "pos": "tr", "format": "{v0} {v1}"},
-        {"tags": ["x00080060"], "pos": "tr"},
+        {"tags": ["00080080"], "pos": "tr"},
+        {"tags": ["00080020", "00080030"], "pos": "tr", "format": "{v0} {v1}"},
+        {"tags": ["00080060"], "pos": "tr"},
 
         {"event": "wlchange", "pos": "br", "format": "窗位: {v0}"},
         {"event": "wlchange", "pos": "br", "format": "窗宽: {v1}"},
@@ -34,20 +34,20 @@
         {"event": "positionchange", "pos": "br", "format": "值: {v1}"}
     ],
     "*": [
-        {"tags": ["x00100020"], "pos": "tl"},
-        {"tags": ["x00100010", "x00100040"], "pos": "tl", "format": "{v0} [{v1}]"},
-        {"tags": ["x00100030"], "pos": "tl"},
+        {"tags": ["00100020"], "pos": "tl"},
+        {"tags": ["00100010", "00100040"], "pos": "tl", "format": "{v0} [{v1}]"},
+        {"tags": ["00100030"], "pos": "tl"},
 
-        {"tags": ["x00200011", "x00200012", "x00200013"], "pos": "bl", "format": "{v0}:{v1}:{v2}"},
-        {"tags": ["x00185100"], "pos": "bl"},
-        {"tags": ["x00201041"], "pos": "bl", "format": "SL: {v0}"},
-        {"tags": ["x00180050"], "pos": "bl", "format": "ST: {v0}"},
-        {"tags": ["x00280010", "x00280011"], "pos": "bl", "format": "RES: {v0}x{v1}"},
-        {"tags": ["x00181100"], "pos": "bl", "format": "FOV: {v0}"},
+        {"tags": ["00200011", "00200012", "00200013"], "pos": "bl", "format": "{v0}:{v1}:{v2}"},
+        {"tags": ["00185100"], "pos": "bl"},
+        {"tags": ["00201041"], "pos": "bl", "format": "SL: {v0}"},
+        {"tags": ["00180050"], "pos": "bl", "format": "ST: {v0}"},
+        {"tags": ["00280010", "00280011"], "pos": "bl", "format": "RES: {v0}x{v1}"},
+        {"tags": ["00181100"], "pos": "bl", "format": "FOV: {v0}"},
 
-        {"tags": ["x00080080"], "pos": "tr"},
-        {"tags": ["x00080020", "x00080030"], "pos": "tr", "format": "{v0} {v1}"},
-        {"tags": ["x00080060"], "pos": "tr"},
+        {"tags": ["00080080"], "pos": "tr"},
+        {"tags": ["00080020", "00080030"], "pos": "tr", "format": "{v0} {v1}"},
+        {"tags": ["00080060"], "pos": "tr"},
 
         {"event": "wlchange", "pos": "br", "format": "窗位: {v0}"},
         {"event": "wlchange", "pos": "br", "format": "窗宽: {v1}"},
