--- a/resources/locales/de/translation.json
+++ b/resources/locales/de/translation.json
@@ -19,7 +19,7 @@
         "history": "Geschichte",
         "image": "Bild",
         "info": "Info",
-        "downloadState": "Zustand herunterladen",
+        "downloadAnnotations": "Herunterladen",
         "drawList": "Vermerke",
         "search": "Suche",
         "id": "ID",
