--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -19,7 +19,7 @@
         "history": "History",
         "image": "Image",
         "info": "Info",
-        "downloadState": "Download state",
+        "downloadAnnotations": "Download",
         "drawList": "Annotations",
         "search": "Search",
         "id": "ID",
