--- a/resources/locales/es/translation.json
+++ b/resources/locales/es/translation.json
@@ -19,7 +19,7 @@
         "history": "Historial",
         "image": "Imagen",
         "info": "Información",
-        "downloadState": "Estado de la descarga",
+        "downloadAnnotations": "Descargar",
         "drawList": "Anotaciones",
         "search": "Búsqueda",
         "id": "ID",
