--- a/resources/locales/fr/translation.json
+++ b/resources/locales/fr/translation.json
@@ -19,7 +19,7 @@
         "history": "Historique",
         "image": "Image",
         "info": "Info",
-        "downloadState": "Télécharger state",
+        "downloadAnnotations": "Télécharger",
         "drawList": "Annotations",
         "search": "Recherche",
         "id": "ID",
