--- a/resources/locales/it/translation.json
+++ b/resources/locales/it/translation.json
@@ -19,7 +19,7 @@
         "history": "Storico",
         "image": "Immagine",
         "info": "Informazioni",
-        "downloadState": "Stato download",
+        "downloadAnnotations": "Scaricare",
         "drawList": "Annotazioni",
         "search": "Cerca",
         "id": "ID",
