--- a/resources/locales/jp/translation.json
+++ b/resources/locales/jp/translation.json
@@ -19,7 +19,7 @@
         "history": "ヒストリー",
         "image": "画像",
         "info": "情報",
-        "downloadState": "状態ファイルダウンロード",
+        "downloadAnnotations": "ダウンロード",
         "drawList": "アノテーション",
         "search": "検索",
         "id": "ID",
