--- a/resources/locales/ro/translation.json
+++ b/resources/locales/ro/translation.json
@@ -19,7 +19,7 @@
         "history": "Istorie",
         "image": "Imagine",
         "info": "Info",
-        "downloadState": "Statut descărcare",
+        "downloadAnnotations": "Descărcar",
         "drawList": "Adnotări",
         "search": "Căutare",
         "id": "ID",
