--- a/resources/locales/ru/translation.json
+++ b/resources/locales/ru/translation.json
@@ -19,7 +19,7 @@
         "history": "История",
         "image": "Изображение",
         "info": "Информация",
-        "downloadState": "Статус загрузки",
+        "downloadAnnotations": "Скачать",
         "drawList": "Аннотации",
         "search": "Поиск",
         "id": "ID",
