--- a/resources/locales/zh/translation.json
+++ b/resources/locales/zh/translation.json
@@ -19,7 +19,7 @@
         "history": "历史记录",
         "image": "图像",
         "info": "信息",
-        "downloadState": "下载状态",
+        "downloadAnnotations": "下载",
         "drawList": "注释",
         "search": "搜索",
         "id": "ID",
